add coroutine dependency

--- a/packages/long_process/android/build.gradle
+++ b/packages/long_process/android/build.gradle
@@ -2,14 +2,14 @@ group 'dev.noboru.long_process'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -41,6 +41,10 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 28
+    }
+
+    dependencies {
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     }
 }
